hopefully final fix for wrap issue

--- a/resources/css/master.css
+++ b/resources/css/master.css
@@ -1224,7 +1224,7 @@ body.wide #container #content #main {
 #content {
 	display: flex;
 	flex-direction: row-reverse;
-	justify-content: space-evenly;
+	justify-content: start;
 }
 #content #main {
 	flex-grow: 1;
